--- a/main.css
+++ b/main.css
@@ -1,37 +1,40 @@
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #f0f0f0;
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .circle {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: black;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .big {
-  width: 150px;
-  height: 150px;
+    width: 200px;
+    height: 200px;
 }
 
 .bigger {
-  width: 200px;
-  height: 200px;
+    width: 300px;
+    height: 300px;
 }
 
 .biggest {
-  width: 250px;
-  height: 250px;
+    width: 400px;
+    height: 400px;
 }
