--- a/main.css
+++ b/main.css
@@ -1,40 +1,624 @@
+ *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
+  font-family: "Poppins", sans-serif;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+  height: 30%;
+  outline: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.big-wrapper {
+  position: relative;
+  padding: 1.7rem 0 2rem;
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+  background: linear-gradient(45deg,  #cecfc7 20%, #713e5a  20% 50%, #331e36 50% 80%, #795468 80%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container {
+  position: relative;
+  max-width: 81rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 3rem;
+  z-index: 10;
+}
+
+header {
+  position: relative;
+  z-index: 70;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.overlay {
+  display: none;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.logo h1 {
+  color:  #cecfc7;
+  font-size: 1.55rem;
+  line-height: 1.2;
+  font-weight: 700;
+}
+
+.links ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+}
+
+.links a {
+  color:#cecfc7 ;
+  margin-left: 4.5rem;
+  display: inline-block;
+  transition: 0.3s;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.links a:hover {
+  color: #795468;
+  transform: scale(1.05);
+  font-weight: 700;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.9rem 1.9rem;
+  color: #fff !important;
+  background-color:  #713e5a;
+  border-radius: 16px;
+  text-transform: capitalize;
+  transition: 0.3s;
+  margin-top: 30px;
+}
+
+.btn:hover {
+ opacity: 60%;
+  transform: scale(1) !important;
+}
+
+.hamburger-menu {
+  position: relative;
+  z-index: 99;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  display: none;
+}
+
+.hamburger-menu .bar {
+  position: relative;
+  width: 100%;
+  height: 3px;
+  background-color:  #eff8e2;
+  border-radius: 3px;
+  transition: 0.5s;
+}
+
+.bar::before,
+.bar::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color:  #eff8e2;
+  border-radius: 3px;
+  transition: 0.5s;
+}
+
+.bar::before {
+  transform: translateY(-8px);
+}
+
+.bar::after {
+  transform: translateY(8px);
+}
+
+.big-wrapper.active .hamburger-menu .bar {
+  background-color: transparent;
+}
+
+.big-wrapper.active .bar::before {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.big-wrapper.active .bar::after {
+  transform: translateY(0) rotate(45deg);
+}
+
+.showcase-area .container {
+  background-color: #e8d6b3;
+  margin: 50px auto;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+
+.big-title {
+  font-size: 1.7rem;
+  color: #331e36;
+  text-transform: capitalize;
+  line-height: 1.4;
+}
+
+.text {
+  color: #861553;
+  font-size: 1.1rem;
+  margin: 1.9rem 0 2.5rem;
+  max-width: 600px;
+  line-height: 2.3;
+}
+
+.showcase-area .btn {
+  box-shadow: 0 0 40px 2px rgba(0, 0, 0, 0.05);
+}
+
+.person {
+  width: 123%;
+  transform: translate(15%, 25px);
+}
+
+.toggle-btn {
+  display: inline-block;
+  border: none;
+  background: #80461B;
+  color: white;
+  outline: none;
+  cursor: pointer;
+  height: 39px;
+  width: 39px;
+  border-radius: 50%;
+  font-size: 1.1rem;
+  transition: 0.3s;
+}
+
+.toggle-btn i {
+  line-height: 39px;
+}
+
+.toggle-btn:hover {
+  background: var(--mainColor);
+}
+
+.big-wrapper.light .toggle-btn i:last-child {
+  display: none;
+}
+
+.big-wrapper.light .toggle-btn i:first-child {
+  display: block;
+}
+
+.big-wrapper.dark .toggle-btn i:last-child {
+  display: block;
+}
+
+.big-wrapper.dark .toggle-btn i:first-child {
+  display: none;
+}
+
+.shape {
+  position: absolute;
+  z-index: 0;
+  width: 500px;
+  bottom: -180px;
+  left: -15px;
+  opacity: 0.1;
+}
+
+.copy {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  animation: appear 1s 1 both;
+}
+
+
+@keyframes appear {
+  0% {
+    clip-path: circle(30% at -25% -25%);
+  }
+  100% {
+    clip-path: circle(150% at 0 0);
+  }
+}
+
+
+.aboutcontainer{
+  display: flex;
+  justify-content: center;
+  background-color: #cecfc7;
+
+}
+.aboutimage img{
+  width: 400px;
+  height: 400px;
+  border: 1px solid #cecfc7;
+
+
+  border-radius: 10px;
+  box-shadow: 2px 2px 4px #795468;
+}
+.rightdiv{
+  width: 400px;
+  height: 350px;
+  background-color: #e8d6b3;
+  margin-left: -100px;
+  margin-top: 40px;
+  border: 1px solid #ac879b;
+  border-radius: 8px;
+  padding: 20px;
+}
+.rightdiv h3{
+
+  font-size: 15px;
+  padding: 20px;
+  line-height:3.5vh;
+}
+.rightdiv p a{
+  border: 1px solid #331e36;
+  background: #331e36;
+  color: #cecfc7;
+  border-radius: 3px;
+  box-shadow: 1px 1px 3px #331e36;
+  padding: 10px;
+  text-align: center;
+  margin: auto 30px;
+}
+
+
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ac879b;
+
+}
+.product{
+   width: 25%;
+   margin: 20px;
+   box-sizing: border-box;
+   float: left;
+   text-align: center;
+   border-radius: 20px;
+   cursor: pointer;
+   padding-top: 10px;
+   box-shadow: 0 14px 28px #795468;
+   transition: 0.4s;
+   background: #e8d6b3;
+}
+.product:hover{
+   box-shadow: 0 3px 6px #331e36;
+   transform: translate(0px, -8px);
+}
+.product img{
+   text-align: center;
+   margin: 0 auto;
+   display: block;
+}
+p{
+   text-align: center;
+   color: #795468;
+   padding: 0 8px;
+}
+h6{
+   font-size: 26px;
+   text-align: center;
+   color: #331e36;
+   margin: 0;
+}
+.product h2{
+  font-size: 25px;
+
+}
+.product ul{
+   list-style:  none;
+   display: flex;
+   justify-content: center;
+   padding: 0;
+
+}
+
+.product ul li{
+   padding:  5px;
+
+}
+.star{
+   font-size: 26px;
+   transition: o.4s;
+   margin: 3px;
+   color: rgb(36, 23, 15);
+}
+.star:hover{
+   transform: scale(1.3);
+   transition: 0.5s;
+}
+button{
+   text-align: center;
+   font-size: 15px;
+   color: #cecfc7;
+   width: 100%;
+   padding: 15px;
+   border: 0;
+   outline: none;
+   cursor: pointer;
+   margin-top: 5px;
+   border-bottom-right-radius: 20px;
+   border-bottom-left-radius:20px;
+
+}
+.buynow{
+   background: #713e5a;
+}
+
+footer{
+  height: 40px;
+  background-color: #e8d6b3;
+  color: #331e36;
+  padding: 10px;
+  text-align: center;
+}
+
+@media screen and (max-width: 870px) {
+  .hamburger-menu {
     display: flex;
-    justify-content: center;
+  }
+
+  .links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--mainColor);
+    z-index: 95;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    transition: 0.5s;
+  }
+
+  .links ul {
+    flex-direction: column;
+  }
+
+  .links a {
+    color: #fff;
+    margin-left: 0;
+    padding: 2rem 0;
+  }
+
+  .links .btn {
+    background: none;
+  }
+
+  .overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.5s;
+  }
+
+  .big-wrapper.active .links {
+    transform: translateX(0);
+    box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.4);
+  }
+
+  .big-wrapper.active .overlay {
+    pointer-events: all;
+    opacity: 1;
+  }
+
+  .showcase-area {
+    padding: 2.5rem 0;
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
+  .showcase-area .container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-gap: 2rem;
+  }
+
+  .big-title {
+    font-size: 1.1rem;
+  }
+
+  .text {
+    font-size: 0.95rem;
+    margin: 1.4rem 0 1.5rem;
+  }
+
+  .person {
+    width: 100%;
+    height: 30%;
+    transform: none;
+  }
+
+  .logo h3 {
+    font-size: 1.25rem;
+  }
+
+  .shape {
+    bottom: -180px;
+    left: -150px;
+  }
 }
 
-.circle {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin: 10px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+@media screen and (max-width: 470px) {
+  .container {
+    padding: 0 1.5rem;
+  }
+
+  .big-title {
+    font-size: 0.9rem;
+  }
+
+  .text {
+    margin: 1.1rem 0 1.5rem;
+  }
+
+  .showcase-area .btn {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hamburger-menu {
+    display: flex;
+  }
+  .product {
+    width: calc(20% - 20px);
 }
 
-.big {
-    width: 200px;
-    height: 200px;
+  .links {
+    position: fixed;
+    top: 0;
+    right: 0;
+    max-width: 450px;
+    width: 100%;
+    height: 100%;
+    background-color: var(--mainColor);
+    z-index: 95;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(100%);
+    transition: 0.5s;
+  }
+
+  .links ul {
+    flex-direction: column;
+  }
+
+  .links a {
+    color: #fff;
+    margin-left: 0;
+    padding: 2rem 0;
+  }
+
+  .links .btn {
+    background: none;
+  }
+
+  .overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.5s;
+  }
+
+  .big-wrapper.active .links {
+    transform: translateX(0);
+    box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.4);
+  }
+
+  .big-wrapper.active .overlay {
+    pointer-events: all;
+    opacity: 1;
+  }
+
+  .showcase-area {
+    padding: 2.5rem 0;
+    max-width: 700px;
+    margin: 0 auto;
+  }
+
+  .showcase-area .container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-gap: 2rem;
+  }
+
+  .big-title {
+    font-size: 1.1rem;
+  }
+
+  .text {
+    font-size: 0.95rem;
+    margin: 1.4rem 0 1.5rem;
+  }
+
+  .person {
+    width: 100%;
+    height: 30%;
+    transform: none;
+  }
+
+  .logo h3 {
+    font-size: 1.25rem;
+  }
+
+  .shape {
+    bottom: -180px;
+    left: -150px;
+  }
 }
 
-.bigger {
-    width: 300px;
-    height: 300px;
+@media screen and (max-width: 480px) {
+  .product {
+      width: 100%;
+  }
 }
 
-.biggest {
-    width: 400px;
-    height: 400px;
-}
